# iplinux-libpicodict

./: .gitignore  Makefile.am  autogen.sh  configure.ac  le16toh.c  libpicodict.c  libpicodict.h  libpicodict.pc.in  picodict-test.c  picodict-verify.c
debian/: changelog  control  rules
